# minimalvncserver

./: CMakeLists.txt  README.md
include/: util.h  win32screencap.h
lib/: util.cpp  win32screencap.cpp
src/: main.cpp
